# geofm-plant-traits

./: .gitignore  README.md  geographic_random_forest.ipynb  pyproject.toml  setup.py  test_gee.ipynb
.github/workflows/: evaluate_models.yaml
evaluation/: evaluate_model.py  evaluate_model_autoregress.py  leaderboard_writer.py
leaderboard/: README.md  leaderboard.json
models/: autoencoder.py  base_model.py  cnn_bands_only.py  ensemble_nn_aux_vars.py  gbdt_aux_vars.py  gbdt_bands_only.py  grf_aux_vars.py  grf_bands_only.py  nn_aux_vars.py  rf_aux_vars.py  rf_bands_only.py  snapshot_ensemble_aux_vars.py  snapshot_ensemble_bands_only.py  torch_model_wrapper.py  vae.py  vanilla_nn_bands_only.py
notebooks/: autoencoder.ipynb  coefficient_of_variation.ipynb  explore_gbdt.ipynb  explore_geographic_rf.ipynb  explore_neural_net.ipynb  explore_plot_data.ipynb  explore_random_forest.ipynb  explore_trait_data.ipynb  plot_residuals.ipynb  preprocess_trait_data.ipynb
src/: data_utils.py  define_dataset.py  io_utils.py  modify_sentinel2_indexer.py  stac_filter_utils.py
tests/: test_data_utils.py  test_modify_sentinel2_indexer.py  test_nn_models.py  test_rf_models.py  test_stac_filter_utils.py
weights/: ae_model.pth  vae_model.pth
