[project]
name = "geofm-plant-traits"
version = "0.1.0"
description = "Predicting global forest functional traits with a geospatial foundation model"
authors = [{name = "Isaac Campbell", email = "isaac.campbell@wolfson.ox.ac.uk"}]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "folium>=0.19.5",
    "geoarrow-pandas>=0.1.1",
    "geoarrow-pyarrow>=0.1.2",
    "geojson>=3.2.0",
    "geopandas>=1.0.1",
    "graphviz>=0.20.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pystac>=1.12.2",
    "pystac-client>=0.8.6",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "rasterio>=1.4.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
]
